--- a/client/src/indexBackup.css
+++ b/client/src/indexBackup.css
@@ -29,9 +29,6 @@ body {
     margin: 0;
     font-size: 18px;
     background-color: #f6f6f6;
-    height: 100vh;
-    overflow-x: hidden;
-    max-width: 100vw;
 
 }
 
@@ -752,7 +749,6 @@ img {
     height: auto; /* Maintain aspect ratio */
     border: 50% solid black;
 }
-
 /* AboutUsComponent styles */
 .about-container {
     display: flex;
@@ -1211,6 +1207,23 @@ img {
     100% {
       transform: scale(1.6, 1.2);
       opacity: 0.0;
+    }
+  }
+  @media screen and (max-width: 858px) {
+    #chat-comp-div {
+      display: flex;
+      position: fixed;
+      bottom: 2%;
+      right: 4%;
+      align-items: center;
+      z-index: 2;
+    }
+    #chat-comp-div-no-animation {
+      right: 2%;
+      left: 2%;
+      bottom: 0%;
+      align-items: center;
+      justify-content: center;
     }
   }
   #dropdown-list {
@@ -1824,6 +1837,102 @@ display: none;
   padding: 25px;
   line-height: 20px;
 }
+@media screen and (max-width: 501px) {
+  #chatbox-div-parent {
+    position: relative;
+  }
+  #chat-top-component {
+    display: flex;
+    justify-content: space-between;
+    background-color: #002e6d;
+    flex-direction: row;
+    height: 27.2vh;
+    z-index: 4;
+  }
+  #top-info-div {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    font-size: medium;
+    color: white;
+    padding-left: 0.5rem;
+    padding-top: 1.5rem;
+    text-align: left;
+  }
+
+  #top-info-div h2 {
+    font-size: 1.4rem;
+    padding-left: 0.5rem;
+    padding-bottom: 0.8rem;
+  }
+
+  #top-info-div h6 {
+    font-size: small;
+    padding-left: 0.5rem;
+
+  }
+  /* #chat-middle-component {
+    display: flex;
+    flex: 1;
+    background-color: #fff;
+    width: 92%;
+    height: 56.2vh;
+    align-self: center !important;
+    justify-content: center;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 4;
+    margin-bottom: 6.2rem;
+    bottom: 0;
+  } */
+
+  #chat-bottom-component {
+    display: flex;
+    flex: 1;
+    background-color: rgba(0, 46, 109, 15%);
+    align-items: center;
+    padding-right: 1rem;
+    padding-left: 1rem;
+  }
+  #x-out-div-chatbox {
+    padding-top: 1rem;
+    padding-right: 1.5rem;
+    color: white;
+    opacity: 70%;
+    font-size: 2.4rem;
+   font-family: Open Sans;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  #x-out-div-chatbox:hover {
+    transition: 0.3s ease-in-out;
+    opacity: 100%;
+  }
+
+  #x-out-div-chatbox:active {
+    box-shadow: 0 3px #666;
+    transform: translateY(2px);
+  }
+  #chat-box-button {
+    padding: 0.6rem;
+    margin: 1.6rem;
+    border-radius: 0.3rem;
+    border: none;
+    background-color: #697492;
+    color: white;
+    display: flex;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+  }
+  #terms-and-policy {
+    font-size: 0.6rem;
+    margin-bottom: -0.8rem;
+  }
+}
 /* END LOCATIONS CHATBOX */
 
 /* EXPERTISE STYLES */
@@ -2084,32 +2193,39 @@ display: none;
     font-weight: bold;
     font-size: 20px;
 }
+
 .review-info {
     position: relative;
     padding: 0 35px;
 }
+
 .review-info .fa {
     position: absolute;
     color: rgba(143, 0, 72, 100%);
     font-size: 1rem;
 }
+
 .review-info .fa-quote-right {
     bottom: 0;
     right: 0;
 }
+
 .review-info .fa-quote-left {
     top: 0;
     left: 0;
 }
+
 .review-name-container {
     line-height: 1.3;
     flex: 1 1 auto;
 }
+
 .review-top-info {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
+
 .user-icon {
     font-size: 70px;
     margin: 0 10px 0 0;
@@ -2124,13 +2240,16 @@ display: none;
     align-items: center;
     justify-content: center;
 }
+
 .user-name .fa-yelp {
     color: #ff1a1a;
 }
+
 .review-paragraph {
     font-style: italic;
     font-size: 1rem;
 }
+
 .google-link {
     display: flex;
     flex-direction: row;
@@ -2140,7 +2259,10 @@ display: none;
 .google-link:active {
     transform: translateY(2px); /* Adjust the number of pixels as needed */
 }
+
+
 /* END REVIEWS */
+
 .home-team:after,
 .home-locations:after {
     /* background: linear-gradient(
@@ -2159,45 +2281,56 @@ display: none;
     width: 100%;
     z-index: 2;
 }
+
 .section-content {
     position: relative;
     z-index: 3;
     max-width: 1024px;
     margin: 0 auto;
 }
+
 /*FOOTER STYLES*/
 .main-footer {
     background-color: var(--black);
     color: var(--white);
     padding: 50px 25px;
+
 }
+
 .footer-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
 }
+
 .footer-item {
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     align-self: baseline;
 }
+
 .footer-item.two-columns {
     width: calc(100% / 2); /* Two columns */
 }
+
 .footer-link {
     text-decoration: none;
     color: var(--white);
     font-size: 0.9rem;
 }
+
 .footer-link:active {
     color: var(--white);
 }
+
 .footer-link:hover {
     text-decoration: underline;
 }
+
 .footer-word-wrap {
     font-size: 1.2rem;
     line-height: 1.25;
@@ -2205,6 +2338,7 @@ display: none;
     font-weight: 700;
     color: white;
 }
+
 .mobile-menu-button {
     display: none;
     position: absolute;
@@ -2214,10 +2348,13 @@ display: none;
     border: none;
     right: 10px;
 }
+
 .mobile-toggle-submenu {
     display: none;
 }
+
 /*HOME BANNER*/
+
 .home-banner {
     color: #fff;
     display: flex;
@@ -2230,6 +2367,7 @@ display: none;
     /* width: 50%; */
     z-index: 1;
 }
+
 .home-banner:after {
     background: rgba(143, 0, 72, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -2248,6 +2386,12 @@ display: none;
     z-index: -1;
 
 }
+
+.banner-title-container {
+    /* width: 40%; */
+    
+}
+
 .banner-title {
     font-size: 3.2rem;
     letter-spacing: 0.04em;
@@ -2256,10 +2400,12 @@ display: none;
     margin: -5px;
     font-family: sans-serif;
 }
+
 .banner-description {
     width: 450px;
     font-size: 1.2em;
 }
+
 .home-banner .btn {
            /* T   R    B    L  */
     padding: 10px 20px 10px 20px;
@@ -2270,11 +2416,17 @@ display: none;
     text-transform: uppercase;
     font-size: 1rem;
 }
+
 #banner-btn-arrow {
     padding: 0px 0px 0px 20px;
     align-self: center;
 }
+@media (max-height: 850px) {
+}
 @media (max-height: 600px) {
+    .oar-about-container {
+       height: 850px;
+    }   
     .about-description-right {
         font-size: 0.8rem;
     }
@@ -2287,11 +2439,13 @@ display: none;
         margin-bottom: 20px;
     } */
 }
+
 @media (min-width: 1025px) {
     .nav-link-container:hover > .submenu {
         display: flex;
         flex-direction: column;
     }
+    
 }
 @media (max-width: 1650px) {
     .pages-header {
@@ -2304,14 +2458,38 @@ display: none;
     }
 }
 @media (max-width: 1295px) {
+    .oar-about-text {
+        font-size: 0.9rem;
+    }
     .pages-header {
         background-image: url(https://i.imgur.com/Cb9CEbY.webp);
+    
     }
     .single-review-container {
         width: calc(88% / 2);
     }
 }
+@media (max-width: 1191px) {
+    .oar-about-info {
+        justify-content: flex-start !important;
+        min-height: 40vw !important;
+    }
+
+    .oar-about-text {
+        font-size: 0.9rem;
+        align-self: center;
+    }
+
+    .oar-about-image-container {
+        max-width: 70% !important;
+        justify-self: flex-start;
+    }
+    .oar-about-image {
+        max-width: 100% !important;
+    }
+}
 @media (max-width: 1160px) {
+    
     .expertise-name {
         font-size: 0.8rem;
     }
@@ -2339,31 +2517,40 @@ display: none;
     span#h-four-temp-fix {
         margin: 45px 0 15px 0;
     }
+
     .mobile-show {
         display: block;
     }
+
     .expertise-header-description {
         width: auto;
     }
+
     .main-footer {
         padding: 60px 35px 60px 0;
     }
+
     .footer-grid {
         display: block;
     }
+
     .footer-item {
         width: 100%;
     }
+
     .footer-title {
         margin: 50px 0 20px 0;
     }
+
     .word-wrap-container {
         display: block;
     }
+
     .footer-word-wrap {
         display: inline-block;
         margin: 0 15px 0 0;
     }
+
     /*Mobile Menu */
     .mobile-menu-button {
         display: flex;
@@ -2507,7 +2694,30 @@ display: none;
 
 }
 @media (max-width: 1015px) {
+    .bullet-list-about {
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 80px; /* Add some gap between columns */   
+        padding: 0px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
+    .oar-about-info {
+        justify-content: flex-start !important;
+        height: 50% !important;
+    }
 
+    .oar-about-text {
+        font-size: 0.8rem;
+        align-self: center;
+    }
+
+    .oar-about-image-container {
+        max-width: 60% !important;
+        justify-self: flex-start;
+    }
+    .oar-about-image {
+        max-width: 100% !important;
+    }
     .grid-item {
         width: calc(90% / 2);
     }
@@ -2544,24 +2754,24 @@ display: none;
       /*  justify-content: flex-end;*/ 
       }
 }
-@media screen and (max-width: 858px) {
-    #chat-comp-div {
-      display: flex;
-      position: fixed;
-      bottom: 2%;
-      right: 4%;
-      align-items: center;
-      z-index: 2;
-    }
-    #chat-comp-div-no-animation {
-      right: 2%;
-      left: 2%;
-      bottom: 0%;
-      align-items: center;
-      justify-content: center;
-    }
-}
 @media (max-width: 850px) {
+    .oar-about-info {
+        justify-content: flex-start !important;
+        min-height: 40vh !important;
+    }
+
+    .oar-about-text {
+        font-size: 0.6rem;
+        align-self: center;
+    }
+
+    .oar-about-image-container {
+        max-width: 60% !important;
+        justify-self: flex-start;
+    }
+    .oar-about-image {
+        max-width: 100% !important;
+    }
     .expertise-name {
         font-size: 0.8rem;
     }
@@ -2589,6 +2799,18 @@ display: none;
     }
 }
 @media (max-width: 768px) {
+    .oar-about-info {
+        min-height: 30vh !important;
+    }
+    .bullet-list-about {
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 18px; /* Add some gap between columns */   
+        padding: 0px 0px 0px 10px;
+        margin: 0px 0px 0px 0px;
+    }
+    .oar-about-text {
+        font-size: 0.5rem;
+    }
     .expertise-item {
         width: 100%;
     }
@@ -2753,7 +2975,85 @@ display: none;
         left: -185px;
     }
 }
+@media (max-width: 640px) {
+    .oar-about-container {
+        min-height: 40vh;
+        min-width: 85vw;
+    }
+    .oar-about-info {
+        display: flex;
+        position: relative;
+        min-height: 18vh !important;
+        flex-direction: column-reverse;
+        min-width: 75vw !important;
+
+    }
+    .bullet-list-about {
+        display: grid; /* Use CSS Grid */
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 0px; /* Add some gap between columns */   
+    }
+
+    .oar-about-text {
+        width: 100%;
+
+        margin-left: 5px;
+        font-size: 0.5rem;
+    }
+
+    .oar-about-image-container {
+        position: relative;
+        z-index: 0;
+        width: 100%;
+    }
+
+    .oar-doctor-image {
+        position: static;
+        width: 100%;
+        max-width: 100%;
+        margin-top: 10px; /* Adjust as needed */
+    }
+}
+
+
 @media (max-width: 576px) {
+    .oar-about-info {
+        display: flex;
+        position: relative;
+        min-height: 12vh !important;
+        flex-direction: column-reverse;
+        width: 75vw !important;
+        min-width: 95vw;
+        align-self: center;
+        padding: 0px 10px 6px 6px;
+        /* margin-bottom: 40px; */
+    }
+    .bullet-list-about {
+        display: grid; /* Use CSS Grid */
+        grid-template-columns: 1fr 1fr; /* Two equal columns */
+        grid-gap: 0px 25px; /* Add some gap between columns */   
+        width: 100% !important;
+        padding: 0px 0px 0px 10px;
+    }
+
+    .oar-about-text {
+        min-width: 10vw !important;
+
+        font-size: 0.5rem;
+    }
+
+    .oar-about-image-container {
+        position: relative;
+        z-index: 0;
+        max-width: 30vw !important;
+    }
+
+    .oar-doctor-image {
+        position: static;
+        width: 100%;
+        max-width: 25% !important;
+        margin-top: 10px; /* Adjust as needed */
+    }
     #form-divs {
         width: 90vw !important;
         position: unset !important;
@@ -2793,306 +3093,40 @@ display: none;
         top: 15px;
     }
 }
-@media screen and (max-width: 501px) {
-    #chatbox-div-parent {
-      position: relative;
-    }
-    #chat-top-component {
-      display: flex;
-      justify-content: space-between;
-      background-color: #002e6d;
-      flex-direction: row;
-      height: 27.2vh;
-      z-index: 4;
-    }
-    #top-info-div {
-      display: flex;
-      flex: 1;
-      flex-direction: column;
-      font-size: medium;
-      color: white;
-      padding-left: 0.5rem;
-      padding-top: 1.5rem;
-      text-align: left;
-    }
-  
-    #top-info-div h2 {
-      font-size: 1.4rem;
-      padding-left: 0.5rem;
-      padding-bottom: 0.8rem;
-    }
-  
-    #top-info-div h6 {
-      font-size: small;
-      padding-left: 0.5rem;
-  
-    }
-    /* #chat-middle-component {
-      display: flex;
-      flex: 1;
-      background-color: #fff;
-      width: 92%;
-      height: 56.2vh;
-      align-self: center !important;
-      justify-content: center;
-      border-radius: 4px;
-      position: absolute;
-      z-index: 4;
-      margin-bottom: 6.2rem;
-      bottom: 0;
-    } */
-  
-    #chat-bottom-component {
-      display: flex;
-      flex: 1;
-      background-color: rgba(0, 46, 109, 15%);
-      align-items: center;
-      padding-right: 1rem;
-      padding-left: 1rem;
-    }
-    #x-out-div-chatbox {
-      padding-top: 1rem;
-      padding-right: 1.5rem;
-      color: white;
-      opacity: 70%;
-      font-size: 2.4rem;
-     font-family: Open Sans;
-      transition: 0.3s ease-in-out;
-      cursor: pointer;
-      display: flex;
-      justify-content: flex-end;
-    }
-  
-    #x-out-div-chatbox:hover {
-      transition: 0.3s ease-in-out;
-      opacity: 100%;
-    }
-  
-    #x-out-div-chatbox:active {
-      box-shadow: 0 3px #666;
-      transform: translateY(2px);
-    }
-    #chat-box-button {
-      padding: 0.6rem;
-      margin: 1.6rem;
-      border-radius: 0.3rem;
-      border: none;
-      background-color: #697492;
-      color: white;
-      display: flex;
-      align-self: center;
-      align-items: center;
-      justify-content: center;
-    }
-    #terms-and-policy {
-      font-size: 0.6rem;
-      margin-bottom: -0.8rem;
-    }
-}
 
-
-/* About.js */
-
-.container-oar-about {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-/* 
-.imageWrapperOARAbout {
-    margin-top: calc(0.4 *  20vw);
-    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    width: 80%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 20px;
-} */
-
-.imageWrapperOARAbout {
-    margin-bottom: 20px;
-    width: 80%;
-    display: flex;
-    flex-direction: row; /* Keep a row layout for larger screens */
-  }
-
-.aboutImageWrapper {
-position: relative;
-width: 100%;
-
-
-/* max-height: 500px; */
-
-overflow: hidden;
-}
-.aboutImageWrapper img {
-position: absolute;
-/* width: 100%; */
-height: auto;
-bottom: 0;
-}
-.altImageOARAboutBackground {
-margin: 0px 0px 0px 0px;
-/* max-width: 80%; */
-z-index: 1; /* Ensure the background image is behind the doctor image */
-}
-.altImageOARDoctor {
-/* max-width: 1s00%; */
-
-height: auto;
-position: absolute;
-bottom: 0;
-z-index: 2;
-}
-#aboutDoctor {
-/* bottom: 15px; */
-width: 60%;
-/* height: 100%; */
-}
-#aboutBackgroundForDoctor {
-    width: 100%;
-    /* height: 80vh; */
-}
-.altImageOther {
-max-width: 100%;
-height: auto;
-}
-.separator-oar-about {
-border-bottom: 1px solid black;
-width: 100%;
-margin-bottom: 20px;
-}
-/*----- About.js -----*/
-
-@media (max-width: 800px) {
-    .main-header {
-        /* height: 23vh; */
-    }
-    .pages-header {
-        /* height: 18vh; */
-    }
-    .aboutImageWrapper {
-        position: relative;
-        width: 100vw;
-        margin-top: calc(-0.3 *  60vh);
-        height: calc(0.80 *  92vh);
-        min-height: unset;
-    }
-    .altImageOARDoctor {
-        max-width: 65%;
-
-    }
-    .altImageOARAboutBackground {
-        margin: 15px;    
-        max-width: unset;
-
-        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    }
-    #aboutDoctor {
-        width: unset;
-        height: unset;
-        bottom: 15px;
-    }
-    #aboutBackgroundForDoctor {
-        width: 100%;
-        height: unset;
-    }
-    .imageWrapperOARAbout {
-        width: unset;
-        height: unset;
-        flex-direction: column;
-        box-shadow: none;
-        margin-top: unset;
-    }
-}
-
-/* Organized Media  */
-@media (max-width: 320px) {
-    .main-header {
-        height: unset;
-    }
-    .pages-header {
-        height: unset;
-    }
-    #aboutDoctor {
-        height: unset;
-        width: unset;
-    }
-    .container-oar-about {
+@media (max-width: 600px) {
+    .oar-about-info {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: 100%; /* Adjust as needed */
-        box-sizing: border-box; /* Include padding in the total height */
-      }
-      
-      .imageWrapperOARAbout {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 20px;
-        width: 100%;
-        box-shadow: none;
-        margin-top: unset;
-      }
-      
-      .aboutImageWrapper {
         position: relative;
-        width: 100%;
-        height: 100vw;
-        overflow: hidden;
-        margin-top: unset;
+        height: 32% !important;
+        flex-direction: column-reverse;
+        min-width: 95vw !important;
     }
-    
-    .aboutImageWrapper img {
-        position: absolute;
-        width: 100%;
-        height: auto;
-        bottom: 0;
+    .bullet-list-about {
+        display: grid; /* Use CSS Grid */
+        grid-gap: 0px 25px !important; /* Add some gap between columns */   
+        padding: 0px 0px 0px 20px !important;
+        margin: 0px !important;
     }
-    .altImageOARAboutBackground {
-        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-        z-index: 1; /* Ensure the background image is behind the doctor image */
-        margin: 15px;    
+
+    .oar-about-text {
+        min-width: 6vh !important;
+        margin-left: 0px;
+        /* font-size: 0.4rem; */
     }
-    
-    .altImageOARDoctor {
-        max-width: 65%;
+
+    .oar-about-image-container {
+        position: relative;
+        z-index: 0;
         width: 100%;
-        bottom: 15px
-      }
-      
-      .altImageOther {
+    }
+
+    .oar-doctor-image {
+        position: static;
+        width: 100%;
         max-width: 100%;
-        height: auto;
-      }
-      
-      .separator-oar-about {
-        border-bottom: 1px solid black;
-        width: 100%;
-        margin-bottom: 20px;
-      }
-      
-      .bullet-list-about {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin-top: 20px;
-        padding: 0;
-      }
-      
-      .bullet-list-about li {
-        list-style: none;
-        margin-bottom: 10px;
-      }
-      
-      .bullet-list-about h3 {
-        margin: 0;
-        font-size: 1.2em;
-        color: #333;
-      }
-      
-  }
-/* ----- Organized Media ----- */
+        margin-top: 10px; /* Adjust as needed */
+    }
+}
+
 
