--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,10 @@
 
 /* fonts */
 /* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap"); */
+* {
+
+    /* width: 100vw; */
+}
 
 :root {
     /* colors */
@@ -2311,7 +2315,7 @@ display: none;
         width: calc(88% / 2);
     }
 }
-@media (max-width: 1160px) {
+@media (max-width: 1360px) {
     .expertise-name {
         font-size: 0.8rem;
     }
@@ -2899,33 +2903,43 @@ display: none;
     flex-direction: column;
     align-items: center;
     overflow:visible;
+    padding: 80px 0px 0px 0px;
+    width: 100vw;
 }
 .imageWrapperOARAbout {
     
     margin-bottom: 100px;
-    margin-bottom: 20px;
-    /* width: 70%; */
+    /* margin-bottom: 20px; */
+    width: 100%;
     display: flex;
     flex-direction: row;
     overflow:visible;
+    justify-content: flex-end;
 
+
+    
 }
 .aboutImageWrapper {
     position: relative;
     width: 100%;
+    display: flex;
     overflow: hidden;
     top: 100px;
     overflow:visible;
-
+    justify-content: flex-end;
 }
 .aboutImageWrapper img {
+
     /* position: absolute; */
     height: auto;
-    bottom: 24px;
+    bottom: 124px;
+    margin-top: -100px;
 }
 .altImageOARAboutBackground {
     margin: 0px 0px 0px 0px;
     z-index: 1; 
+
+
 }
 .altImageOARDoctor {
     height: auto;
@@ -2934,11 +2948,13 @@ display: none;
     z-index: 2;
 }
 #aboutDoctor {
-    width: 62%;
+    width: 42%;
 }
 #aboutBackgroundForDoctor {
-    width: 100%;
+    width: 60%;
     /* top: 100px; */
+    /* right: 0; */
+
 }
 .altImageOther {
     max-width: 100%;
@@ -2949,10 +2965,69 @@ display: none;
     width: 100%;
     margin-bottom: 20px;
 }
+/* Nest Hub Max */
 
 /* Organized Media  */
 /* About.js */
-@media (min-width: 1275px) and (max-height: 805px) and (min-width: 795px) {
+@media (min-width: 1150px) and (max-height: 850px) and (max-width: 1300px) {
+    * {
+
+        /* width: 100vw; */
+        /* overflow-y: hidden; */
+    }
+    .main-header {
+        /* height: 23vh; */
+    }
+    .pages-header {
+        /* height: 18vh; */
+    }
+    .aboutImageWrapper {
+        position: relative;
+        /* width: 100vw; */
+        margin-bottom: 100px;
+        margin-top: calc(-0.3 *  90vh);
+        height: calc(0.80 *  88vh);
+        min-height: unset;
+        /* top: 0px; */
+        justify-content: unset;
+        
+    }
+    .aboutImageWrapper img {
+        position: absolute;
+    }
+    
+    .altImageOARDoctor {
+        max-width: 38%;
+
+    }
+    .altImageOARAboutBackground {
+
+        margin: 15px;    
+        max-width: unset;
+
+        box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
+    }
+    #aboutDoctor {
+        width: unset;
+        height: unset;
+        bottom: 15px;
+    }
+    #aboutBackgroundForDoctor {
+        /* width: 100%; */
+        height: unset;
+    }
+    .imageWrapperOARAbout {
+        width: unset;
+        height: unset;
+        flex-direction: column;
+        box-shadow: none;
+        margin-top: unset;
+    }
+    .imageWrapperOARAbout img {
+        top: 14px;
+    }
+}
+@media (min-width: 1300px) and (max-height: 700px) and (min-width: 795px) {
     .aboutImageWrapper {
         top: 140px;
     }
@@ -2981,7 +3056,7 @@ display: none;
     }
     .imageWrapperOARAbout {
 
-        width: 75%;
+        width: 90%;
     }
 }
 
@@ -2992,14 +3067,20 @@ display: none;
     .pages-header {
         /* height: 18vh; */
     }
+    * {
+        overflow-x: hidden;
+
+    }
     .aboutImageWrapper {
         position: relative;
         width: 100vw;
         /* margin-top: calc(-0.3 *  90vh); */
-        margin-top: calc(-0.3 *  45vh);
+        margin-top: calc(-1.8 * (100vw / 4.5) + (100vh / 12)); /* Adjust the values as needed */
         height: calc(0.80 *  88vh);
         min-height: unset;
         top: 0px;
+        justify-content: unset;
+
     }
     .aboutImageWrapper img {
         position: absolute;
@@ -3035,7 +3116,7 @@ display: none;
         bottom: 0; 
     }
 }
-@media (max-width: 760px) {
+@media (max-width: 760px) and (max-width: 595px) {
     .main-header {
         /* height: 23vh; */
     }
@@ -3046,10 +3127,11 @@ display: none;
         position: relative;
         width: 100vw;
         /* margin-top: calc(-0.3 *  90vh); */
-        margin-top: calc(-0.3 *  75vh);
+        margin-top: calc(-0.35 *  110vh);
         height: calc(0.80 *  88vh);
         min-height: unset;
         top: 0px;
+        bottom: 0px;
     }
     .aboutImageWrapper img {
         position: absolute;
@@ -3085,12 +3167,12 @@ display: none;
         bottom: 0; 
     }
 }
-@media (min-height: 900px) and (max-width: 600px) {
+@media (min-height: 970px) and (max-width: 615px) {
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
-        bottom: 0px;
+        /* bottom: 110px; */
     }
     .imageWrapperOARAbout #aboutDoctor {
-        bottom: 14px;
+        /* bottom: 114px; */
     }
 }
 @media (max-width: 900px) and (min-height: 700px) and (min-width: 359px) and (max-width: ) {
@@ -3118,9 +3200,9 @@ display: none;
         align-items: center;
         height: 100%; /* Adjust as needed */
         box-sizing: border-box; /* Include padding in the total height */
-      }
-      
-      .imageWrapperOARAbout {
+    }
+    
+    .imageWrapperOARAbout {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -3128,13 +3210,15 @@ display: none;
         width: 100%;
         box-shadow: none;
         margin-top: unset;
+        margin-top: calc(-0.25 *  88vh);
+
     }
     
     .imageWrapperOARAbout img {
-          bottom: 0;
-      }
-      
-      .aboutImageWrapper {
+        bottom: 0;
+    }
+    
+    .aboutImageWrapper {
         position: relative;
         width: 100%;
         height: 100vw;
@@ -3158,9 +3242,9 @@ display: none;
         max-width: 65%;
         width: 100%;
         bottom: 15px
-      }
-      
-      .altImageOther {
+    }
+    
+    .altImageOther {
         max-width: 100%;
         height: auto;
       }
