--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2905,6 +2905,7 @@ display: none;
     overflow:visible;
     padding: 80px 0px 0px 0px;
     width: 100vw;
+    
 }
 .imageWrapperOARAbout {
     
@@ -2915,46 +2916,62 @@ display: none;
     flex-direction: row;
     overflow:visible;
     justify-content: flex-end;
-
-
+    
+    
     
 }
 .aboutImageWrapper {
+    
     position: relative;
     width: 100%;
     display: flex;
     overflow: hidden;
-    top: 100px;
+    top: 140px;
     overflow:visible;
     justify-content: flex-end;
 }
 .aboutImageWrapper img {
-
+    
     /* position: absolute; */
     height: auto;
-    bottom: 124px;
+    bottom: 0;
+    left: calc((100vw - 900px) / 2); /* Adjust the value based on the screen size */
+
     margin-top: -100px;
 }
 .altImageOARAboutBackground {
     margin: 0px 0px 0px 0px;
     z-index: 1; 
-
-
+    
 }
 .altImageOARDoctor {
     height: auto;
     position: absolute;
     bottom: 0;
     z-index: 2;
+    left: 10;
+    
 }
 #aboutDoctor {
-    width: 42%;
+    width: 40%;
 }
 #aboutBackgroundForDoctor {
-    width: 60%;
-    /* top: 100px; */
-    /* right: 0; */
+    width: 50%;
+    box-shadow:     
+    /* -2px 0 0 rgba(218, 102, 123, 1), Right border */
+    
+    /* 0 8px 0 0 rgba(218, 102, 123, 1), Bottom border */
+    /* 0 -2px 0 rgba(218, 102, 123, 1),  Top border */
+    /* 0px 8px 0 0 rgba(218, 102, 123, 1), Bottom-right corner */
+    
+    /* -2px -2px 0 0 rgba(218, 102, 123, 1); */
+    /* -2px 0 0 rgba(218, 102, 123, 1), */
+    /* 0 8px 0 0 rgba(218, 102, 123, 1), */
+    /* 0 -2px 0 rgba(218, 102, 123, 1); */
+    /* box-shadow: */
+    0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
 
+    
 }
 .altImageOther {
     max-width: 100%;
@@ -2965,15 +2982,66 @@ display: none;
     width: 100%;
     margin-bottom: 20px;
 }
+
+#bullet-list-div {
+    /* width: 40%; */
+    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
+    padding: 20px;
+    margin-right: calc((100vw - 1500px) / 2); /* Adjust the value based on the screen size */
+
+}
+#bullet-list-div-mobile {
+    /* width: 40%; */
+    display: none;
+    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
+    padding: 20px;
+    margin-right: calc((100vw - 1500px) / 2); /* Adjust the value based on the screen size */
+
+}
 /* Nest Hub Max */
 
 /* Organized Media  */
 /* About.js */
+@media (min-height: 930px) and (min-width: 1900px) {
+    .aboutImageWrapper img {
+            /* position: absolute; */
+            height: auto;
+            bottom: 0;
+            left: calc((100vw - 1300px) / 2);
+            margin-top: -100px;
+    }
+    .aboutImageWrapper {
+    
+        position: relative;
+        width: 100%;
+        display: flex;
+        overflow: hidden;
+        top: 200px;
+        overflow:visible;
+        justify-content: flex-end;
+    }
+    #aboutDoctor {
+        width: 35%;
+    }
+}
 @media (min-width: 1150px) and (max-height: 850px) and (max-width: 1300px) {
     * {
 
         /* width: 100vw; */
         /* overflow-y: hidden; */
+    }
+    .aboutImageWrapper img {
+        /* position: absolute; */
+        height: auto;
+        bottom: 0;
+        left: 0;
+        margin-top: -100px;
+    }
+    #bullet-list-div {
+        display:none;
+    }
+    #bullet-list-div-mobile {
+        display: flex;
     }
     .main-header {
         /* height: 23vh; */
@@ -2994,6 +3062,7 @@ display: none;
     }
     .aboutImageWrapper img {
         position: absolute;
+        
     }
     
     .altImageOARDoctor {
@@ -3014,6 +3083,8 @@ display: none;
     }
     #aboutBackgroundForDoctor {
         /* width: 100%; */
+        width: 60%;
+
         height: unset;
     }
     .imageWrapperOARAbout {
@@ -3044,6 +3115,7 @@ display: none;
     }
 }
 @media (min-height: 700px) and (max-width: 1300px) and (min-width: 1050px){
+    
     .aboutImageWrapper {
         top: 140px;
     }
@@ -3067,6 +3139,12 @@ display: none;
     .pages-header {
         /* height: 18vh; */
     }
+    #bullet-list-div {
+        display:none;
+    }
+    #bullet-list-div-mobile {
+        display: flex;
+    }
     * {
         overflow-x: hidden;
 
@@ -3084,6 +3162,8 @@ display: none;
     }
     .aboutImageWrapper img {
         position: absolute;
+        left: 0;
+
     }
 
     .altImageOARDoctor {
@@ -3115,6 +3195,9 @@ display: none;
     .imageWrapperOARAbout img {
         bottom: 0; 
     }
+    #bullet-list-div {
+        margin-left: 0;
+    }
 }
 @media (max-width: 760px) and (max-width: 595px) {
     .main-header {
@@ -3123,6 +3206,7 @@ display: none;
     .pages-header {
         /* height: 18vh; */
     }
+    
     .aboutImageWrapper {
         position: relative;
         width: 100vw;
@@ -3135,6 +3219,7 @@ display: none;
     }
     .aboutImageWrapper img {
         position: absolute;
+        left: 0;
     }
 
     .altImageOARDoctor {
@@ -3231,6 +3316,7 @@ display: none;
         width: 100%;
         height: auto;
         bottom: 0;
+
     }
     .altImageOARAboutBackground {
         box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
