--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2953,7 +2953,7 @@ display: none;
     
 }
 #aboutDoctor {
-    width: 40%;
+    width: 33%;
 }
 #aboutBackgroundForDoctor {
     width: 50%;
@@ -2985,19 +2985,91 @@ display: none;
 
 #bullet-list-div {
     /* width: 40%; */
-    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
+    box-shadow: 0 0 0 1px rgba(143, 0, 72,0.75), 4px 4px 0 0 rgba(143, 0, 72,0.75), 0 0 0 1px rgba(143, 0, 72,0.5), 4px 4px 0 0 rgba(143, 0, 72,0.5), 0 0 0 2px rgba(143, 0, 72,0.25), 8px 8px 0 0 rgba(143, 0, 72,0.25), 12px 12px 0 0 rgba(143, 0, 72,0.15);
+    /* align-items: flex-start; */
+    columns: repeat(2, 1fr); /* Two equal-width columns */
+    gap: 20px 10px;
     padding: 20px;
     margin-right: calc((100vw - 1500px) / 2); /* Adjust the value based on the screen size */
-
+    display: grid;
+    flex-direction: column; /* Stack items vertically */
 }
 #bullet-list-div-mobile {
     /* width: 40%; */
+    box-shadow: 0 0 0 1px rgba(143, 0, 72,0.75), 4px 4px 0 0 rgba(143, 0, 72,0.75), 0 0 0 1px rgba(143, 0, 72,0.5), 4px 4px 0 0 rgba(143, 0, 72,0.5), 0 0 0 2px rgba(143, 0, 72,0.25), 8px 8px 0 0 rgba(143, 0, 72,0.25), 12px 12px 0 0 rgba(143, 0, 72,0.15);
     display: none;
-    box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
-    padding: 20px;
-    margin-right: calc((100vw - 1500px) / 2); /* Adjust the value based on the screen size */
+    /* padding: 10px; */
+    margin-bottom: 100px;
+    /* margin-top: 20px; */
+    flex-direction: column; /* Stack items vertically */
+    margin-top: 20px;
+    gap: 10px; /* Add some space between items */
+}
+.bullet-list-about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
+    gap: 10px 45px; /* Add some space between items */
+}
+#bullet-list-div-mobile h2, p {
+    font-size: 1.2rem;
+    /* align-self: center; */
+    text-align: center;
+    max-width: 20vw;
+    padding: 0px;
+    margin: 0px;
+    line-height: 1.3;
+
 
 }
+.bullet-list-about li {
+    max-width: 5vw;
+    list-style-type: none;
+    align-self: center;
+}
+.bullet-list-about img {
+    margin-top: 0px;;
+}
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+.large {
+	font-size: 1.6rem;
+
+}
+
+.small {
+	font-size: 3rem;
+}
+
+.rise {
+	text-shadow: -0.01em -0.01em 0.01em #000;
+	animation: rise 2s ease-in-out 0.5s forwards;
+
+}
+
+@keyframes rise {
+	to {
+		text-shadow: 0em 0.01em white, 0em 0.02em white, 0em 0.02em 0.03em white,
+			-0.01em 0.01em #333, -0.02em 0.02em #333, -0.03em 0.03em #333,
+			-0.04em 0.04em #333, -0.01em -0.01em 0.03em #000, -0.02em -0.02em 0.03em #000,
+			-0.03em -0.03em 0.03em #000;
+		transform: translateY(-0.025em) translateX(0.04em);
+	}
+}
+
+.outline {
+	background-clip: text;
+	color: #ffdd40;
+	animation: outline 1s ease-in-out 1.5s forwards;
+}
+
+@keyframes outline {
+	from {
+		text-shadow: 0em -7em 10em #fff;
+	}
+	to {
+		text-shadow: 0 0.02em #fff, 0.02em 0 #fff, -0.02em 0 #fff, 0 -0.02em #fff;
+	}
+}
+
 /* Nest Hub Max */
 
 /* Organized Media  */
@@ -3008,7 +3080,7 @@ display: none;
             height: auto;
             bottom: 0;
             left: calc((100vw - 1300px) / 2);
-            margin-top: -100px;
+            /* margin-top: -100px; */
     }
     .aboutImageWrapper {
     
@@ -3042,6 +3114,7 @@ display: none;
     }
     #bullet-list-div-mobile {
         display: flex;
+        margin-right: 0px;
     }
     .main-header {
         /* height: 23vh; */
@@ -3099,20 +3172,26 @@ display: none;
     }
 }
 @media (min-width: 1300px) and (max-height: 700px) and (min-width: 795px) {
-    .aboutImageWrapper {
-        top: 140px;
+    #aboutDoctor {
+        width: 40%;
+    }
+   
+    /* .aboutImageWrapper {
+        top: 100px;
     }
     .imageWrapperOARAbout #aboutBackgroundForDoctor {
         top: 105px;
     }
     .imageWrapperOARAbout #aboutDoctor {
-        /* top: 0px; */
         bottom: 0px;
     }
     .imageWrapperOARAbout {
 
         width: 75%;
     }
+    #aboutBackgroundForDoctor {
+        width: 80%;
+    } */
 }
 @media (min-height: 700px) and (max-width: 1300px) and (min-width: 1050px){
     
@@ -3144,6 +3223,7 @@ display: none;
     }
     #bullet-list-div-mobile {
         display: flex;
+        margin-right: 0px;
     }
     * {
         overflow-x: hidden;
@@ -3195,8 +3275,9 @@ display: none;
     .imageWrapperOARAbout img {
         bottom: 0; 
     }
-    #bullet-list-div {
+    #bullet-list-div-mobile {
         margin-left: 0;
+        flex-direction: column;
     }
 }
 @media (max-width: 760px) and (max-width: 595px) {
@@ -3318,6 +3399,23 @@ display: none;
         bottom: 0;
 
     }
+    #bullet-list-div-mobile {
+        columns: repeat(2, 1fr); /* Two equal-width columns */
+        gap: 2px 0px;
+        align-items: center;
+        align-self: flex-start;
+    }
+    #bullet-list-div-mobile h2, p {
+        font-size: 0.8rem;
+        align-self: center;
+        text-align: center;
+        max-width: 75vw;
+        padding: 0px;
+        margin: 0px;
+        line-height: 1.3;
+        margin-bottom: 10px;
+
+    }
     .altImageOARAboutBackground {
         box-shadow: 0 0 0 2px rgba(218,102,123,1), 8px 8px 0 0 rgba(218,102,123,1);
         z-index: 1; /* Ensure the background image is behind the doctor image */
@@ -3340,27 +3438,35 @@ display: none;
         width: 100%;
         margin-bottom: 20px;
       }
+
       
       .bullet-list-about {
-        display: flex;
+        display: grid;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-top: 20px;
+        margin-top: 0;
         padding: 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
+        gap: 10px 35px; /* Add some space between items */
       }
       
       .bullet-list-about li {
         list-style: none;
-        margin-bottom: 10px;
+        line-height: 1.3;
+        margin-bottom: 1px;
+        font-size: 0.7em;
+        max-width: 20vw;
       }
       
       .bullet-list-about h3 {
         margin: 0;
-        font-size: 1.2em;
         color: #333;
       }
-      
+      .large {
+        font-size: 1rem;
+    }
 }
 
 /* ----- Organized Media ----- */
